Gtk-3.2x&4.0: [Gnome-builder] Stop exposing drop-shadows behind the keycaps in GtkTooltip

--- a/src/gtk/sass/common/_common.scss
+++ b/src/gtk/sass/common/_common.scss
@@ -5709,6 +5709,7 @@ cursor-handle {
   tooltip.background & {
     background-color: $sggt_bg;
     color: $sel_fg;
+    box-shadow: none;
   }
 }
 
